--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,3 +1,6 @@
-<article class="example" id="uk">
-  <h1>Hello node and js!</h1>
-</article>
+<h2>TASK 1</h2>
+<div id="message">Натисніть правильну клавішу:</div>
+<div id="key"></div>
+<button id="resetGame">Reset Game</button>
+<h2>TASK 2</h2>
+<canvas id="sales-chart" width="0"></canvas>
